# ohsome-filter-to-sql

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Jenkinsfile  OFL.g4  README.md  inbox.md  pyproject.toml  sonar-project.properties
ohsome_filter_to_sql/: OFLLexer.py  OFLListener.py  OFLParser.py  __init__.py  main.py
scripts/: release.sh
tests/: conftest.py  test_imports.py  test_main.py  test_main.py--test_area_range_invalid[1674019360].approved.txt  test_main.py--test_area_range_invalid[2129706043].approved.txt  test_main.py--test_area_range_invalid[2508288741].approved.txt  test_main.py--test_area_range_invalid[2663534692].approved.txt  test_main.py--test_area_range_invalid[3494866316].approved.txt  test_main.py--test_area_range_invalid[3515949189].approved.txt  test_main.py--test_area_range_invalid[3538735404].approved.txt  test_main.py--test_area_range_invalid[3549240091].approved.txt  test_main.py--test_area_range_invalid[3800206014].approved.txt  test_main.py--test_area_range_invalid[4019731171].approved.txt  test_main.py--test_area_range_match[1218789556].approved.txt  test_main.py--test_area_range_match[1271363799].approved.txt  test_main.py--test_area_range_match[1503468204].approved.txt  test_main.py--test_area_range_match[1795195436].2.approved.txt  test_main.py--test_area_range_match[1795195436].approved.txt  test_main.py--test_area_range_match[1956054418].2.approved.txt  test_main.py--test_area_range_match[1956054418].approved.txt  test_main.py--test_area_range_match[2129706043].approved.txt  test_main.py--test_area_range_match[2369134205].approved.txt  test_main.py--test_area_range_match[2508288741].approved.txt  test_main.py--test_area_range_match[2638756165].approved.txt  test_main.py--test_area_range_match[2663534692].approved.txt  test_main.py--test_area_range_match[2798195470].2.approved.txt  test_main.py--test_area_range_match[2798195470].approved.txt  test_main.py--test_area_range_match[3229558977].2.approved.txt  test_main.py--test_area_range_match[3229558977].approved.txt  test_main.py--test_area_range_match[3392609861].2.approved.txt  test_main.py--test_area_range_match[3392609861].approved.txt  test_main.py--test_area_range_match[3494866316].approved.txt  test_main.py--test_area_range_match[3515949189].approved.txt  test_main.py--test_area_range_match[3536488239].2.approved.txt  test_main.py--test_area_range_match[3536488239].approved.txt  test_main.py--test_area_range_match[3549240091].approved.txt  test_main.py--test_area_range_match[3667517152].2.approved.txt  test_main.py--test_area_range_match[3667517152].approved.txt  test_main.py--test_area_range_match[3786531077].approved.txt  test_main.py--test_area_range_match[4056703330].2.approved.txt  (+277 more)
tests/approvals/: test_main.py--test_area_range_invalid[247079827].approved.txt  test_main.py--test_area_range_invalid[4131134400].approved.txt  test_main.py--test_area_range_invalid[4229249867].approved.txt  test_main.py--test_area_range_match[1271363799].approved.txt  test_main.py--test_area_range_match[1503468204].approved.txt  test_main.py--test_area_range_match[1674019360].approved.txt  test_main.py--test_area_range_match[2129706043].approved.txt  test_main.py--test_area_range_match[2369134205].approved.txt  test_main.py--test_area_range_match[2508288741].approved.txt  test_main.py--test_area_range_match[2663534692].approved.txt  test_main.py--test_area_range_match[3392609861].approved.txt  test_main.py--test_area_range_match[3494866316].approved.txt  test_main.py--test_area_range_match[3515949189].approved.txt  test_main.py--test_area_range_match[3536488239].approved.txt  test_main.py--test_area_range_match[3538735404].approved.txt  test_main.py--test_area_range_match[3549240091].approved.txt  test_main.py--test_area_range_match[3667517152].approved.txt  test_main.py--test_area_range_match[3786531077].approved.txt  test_main.py--test_area_range_match[4056703330].approved.txt  test_main.py--test_area_range_match[439154810].approved.txt  test_main.py--test_area_range_match[631778096].approved.txt  test_main.py--test_build_tree[120394598].approved.txt  test_main.py--test_changeset_list_match[1429363539].approved.txt  test_main.py--test_changeset_list_match[289504152].approved.txt  test_main.py--test_changeset_list_match[3366082430].approved.txt  test_main.py--test_changeset_match.approved.txt  test_main.py--test_changeset_match[1842695516].approved.txt  test_main.py--test_changeset_match[2819697885].approved.txt  test_main.py--test_changeset_match[2998207541].approved.txt  test_main.py--test_changeset_match[321509448].approved.txt  test_main.py--test_changeset_range_match[1234226615].approved.txt  test_main.py--test_changeset_range_match[1474436047].approved.txt  test_main.py--test_changeset_range_match[1585496577].approved.txt  test_main.py--test_changeset_range_match[1624683731].approved.txt  test_main.py--test_changeset_range_match[2258540511].approved.txt  test_main.py--test_changeset_range_match[2733530570].approved.txt  test_main.py--test_changeset_range_match[3783359134].approved.txt  test_main.py--test_changeset_range_match[3807449982].approved.txt  test_main.py--test_changeset_range_match[4105754122].approved.txt  test_main.py--test_changeset_range_match[911342153].approved.txt  (+171 more)
tests/approved/: test_main.py--test_area_range_invalid[4131134400].approved.txt  test_main.py--test_area_range_match[1503468204].approved.txt  test_main.py--test_area_range_match[1674019360].approved.txt  test_main.py--test_area_range_match[3667517152].approved.txt  test_main.py--test_build_tree[120394598].approved.txt  test_main.py--test_build_tree[3829097196].approved.txt  test_main.py--test_build_tree[489910419].approved.txt  test_main.py--test_expression_in_brakets[1394902039].approved.txt  test_main.py--test_expression_in_brakets[536714158].approved.txt  test_main.py--test_gemoetry_match_invalid[1442615545].approved.txt  test_main.py--test_geometry_match[1567532331].approved.txt  test_main.py--test_geometry_match[3563057067].approved.txt  test_main.py--test_tag_match[1349012096].approved.txt  (+39 more)
(+151 files in other folders)
