[project]
name = "ohsome-filter-to-sql"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{email="ohsome@heigit.org"}, {email="martin.raifer@heigit.org"}]
requires-python = ">=3.13"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
]

[project.scripts]
ohsome-filter-to-sql= "ohsome_filter_to_sql.main:cli"

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = ""  # use ohsome-filter-to-sql/ as root instead the default src/ohsome-filter-to-sql

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "pytest-approval",
    "pre-commit>=4.2.0",
]

[tool.ruff]
extend-exclude = [
    "ohsome_filter_to_sql/OFLLexer.py",
    "ohsome_filter_to_sql/OFLListener.py",
    "ohsome_filter_to_sql/OFLParser.py"
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle Error
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-nameing
    "Q",    # flake8-quotes
    "W",    # pycodestyle Warning
    "C90",  # mccabe
    "TRY",  # tryceratops
    "RUF",  # ruff-specific rules
    "FURB", # refurb
    "PERF", # perflint
    "S",    # bandit
    "B",    # bugbear
    "SIM",  # simplify
]


[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101", "S608"]  # #S101 usage of asserts; S608 possible SQL injection

[tool.pytest]
addopts = ["-s"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
pytest-approval = { git = "https://git.sr.ht/~talfus-laddus/pytest-approval" }

