[project]
name = "ohsome-filter-to-sql"
version = "0.1.0"
description = "Translate ohsome API filter to SQL WHERE clause ready to be used with ohsomeDB"
readme = "README.md"
license = "LGPL-3.0-only"
authors = [{email="ohsome@heigit.org"}]
requires-python = ">=3.12"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "asyncpg-recorder",
    "pytest-approval",
]

[project.scripts]
ohsome-filter-to-sql= "ohsome_filter_to_sql.main:cli"

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = ""  # use ohsome-filter-to-sql/ as root instead the default src/ohsome-filter-to-sql

[tool.uv.sources]
pytest-approval = { git = "https://github.com/GIScience/pytest-approval.git" }
asyncpg-recorder = { git = "https://github.com/GIScience/asyncpg-recorder.git" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "pre-commit>=4.2.0",
    "asyncpg>=0.30.0",
    "pytest-asyncio>=1.1.0",
    "antlr4-tools>=0.2.2",
]

[tool.ruff]
extend-exclude = [
    "ohsome_filter_to_sql/OFLLexer.py",
    "ohsome_filter_to_sql/OFLListener.py",
    "ohsome_filter_to_sql/OFLParser.py"
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle Error
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-nameing
    "Q",    # flake8-quotes
    "W",    # pycodestyle Warning
    "C90",  # mccabe
    "TRY",  # tryceratops
    "RUF",  # ruff-specific rules
    "FURB", # refurb
    "PERF", # perflint
    "S",    # bandit
    "B",    # bugbear
    "SIM",  # simplify
]


[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101", "S608"]  # S101 usage of asserts; S608 possible SQL injection
"ohsome_filter_to_sql/main.py" = ["N802", "N803"]  # N802 function name should be lowercase

[tool.pytest]
addopts = ["-s"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.asyncpg-recorder]
"cassettes-dir"="tests/cassettes"

[tool.pytest-approval]
"approved-dir"="tests/approved"